03ingress-mongodb/mongoexpress-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongoexpress-deployment
  labels:
    app: mongoexpress-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mongoexpress
  template:
    metadata:
      labels:
        app: mongoexpress
    spec:
      containers:
        - name: mongoexpress-container
          image: mongo-express
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: "1024Mi"
              cpu: "1"
